Increased tile mass of water in DirtAlgae from 1000 to 1100. Helps if no WaterCoal is spawned and should be a minor hassle (moahaha) to players and might also make them more aware to check tile masses.

--- a/emptera_fork/worldgen/biomes/Void.yaml
+++ b/emptera_fork/worldgen/biomes/Void.yaml
@@ -23,6 +23,8 @@ TerrainBiomeLookupTable:
         massOverride: 800 #200
     - content: Water
       bandSize: 0.015
+      overrides:
+        massOverride: 1100 #1000
     - content: Carbon
       bandSize: 0.03
       overrides:
